--- a/使用dask处理大规模数据的数值计算问题/流处理.ipynb
+++ b/使用dask处理大规模数据的数值计算问题/流处理.ipynb
@@ -1059,7 +1059,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 批处理"
+    "## 批处理\n",
+    "\n",
+    "更加常见的场景是使用流做批处理,我们当然可以直接使用上面的数据截断缓存方法来构造批数据,然后使用python函数处理.但显然这并不高效优雅.\n",
+    "\n",
+    "另一种方式则是使用streamz提供的两种流数据结构\n",
+    "\n",
+    "\n",
+    "### batch结构\n",
+    "\n",
+    "\n",
+    "batch结构用于构造由"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dask.distributed import Client\n",
+    "from streamz import Stream\n",
+    "client = Client(\"localhost:8786\",processes=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = stream.to_batch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dataframe结构,借助pandas,dask,甚至cupy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     4\n",
+      "1     7\n",
+      "2    12\n",
+      "Name: x, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "stream = Stream()\n",
+    "df_sample = pd.DataFrame({'x': [1, 2, 3], 'y': [4, 5, 6]})\n",
+    "sdf = DataFrame(example=df_sample, stream=stream)\n",
+    "\n",
+    "L = sdf.stream.scatter().map(lambda x: x[\"x\"]**2+3).gather().sink(print)\n",
+    "\n",
+    "sdf.emit(df_sample)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dataframe只能处理结构化数据,这个例子中我们首先使用pandas构造了一个dataframe的Scheme(设计方案),`df_sample`,后续的所有使用`emit`传入的dataframe就固定好了从流中解析出的是这个样式.这个例子可以看出我们可以构造数据类型`dataframe`来做批处理,但如何构造批呢?"
    ]
   },
   {
